social newspaper icon - fix spacing on mobile

--- a/assets/styles/layouts/Social.scss
+++ b/assets/styles/layouts/Social.scss
@@ -21,3 +21,9 @@
     }
 
 }
+
+@media(max-width: 400px) {
+    .Social .fa-newspaper-o {
+        margin-top: 15px;
+    }
+}
